--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <h5 class="font-bold mb-6 dark:text-white uppercase tracking-wider">Hızlı Erişim</h5>
                     <ul class="space-y-3 text-gray-600 dark:text-slate-400">
                         <li><a href="#" class="hover:text-orange-500 transition">Anasayfa</a></li>
-                        <li><a href="#urunler" class="hover:text-orange-500 transition">Ürünlerimiz</a></li>
+                        <li><a href="urunler.html" class="hover:text-orange-500 transition">Ürünlerimiz</a></li>
                         <li><a href="#hakkimizda" class="hover:text-orange-500 transition">Hakkımızda</a></li>
                     </ul>
                 </div>
